...
            </objects>
            <point key="canvasLocation" x="-762" y="-365"/>
        </scene>
        <!--Tiles View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="TilesViewController" customModule="Puzzle15" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oUE-ly-nzH">
                                <rect key="frame" x="8" y="72" width="359" height="587"/>
...
                            <constraint firstItem="oUE-ly-nzH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="cWP-1P-nYW"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oUE-ly-nzH" secondAttribute="bottom" constant="8" id="oIw-3i-C6Q"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="f18-vM-Ax0">
                        <barButtonItem key="rightBarButtonItem" title="Menu" id="1c1-F2-TrR">
                            <connections>
                                <segue destination="uXw-64-RlM" kind="presentation" identifier="showMenu" id="dgH-Lq-pFF"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LFx-x2-M7g" id="0Sz-7W-Ar4">
                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="G8J-vO-7g4">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="SideMenuTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="V4a-wc-ZD4" id="Tqm-7g-91W"/>
                            <outlet property="delegate" destination="V4a-wc-ZD4" id="LU5-XI-OxQ"/>
                        </connections>
                    </tableView>
...
