...
  func showAboutDialog() {
    let version = Bundle.main.object(forInfoDictionaryKey: "CFBundleShortVersionString") as? String
      ?? "Version not available"
    let alert = UIAlertController(title: "About",
                                  message: "Alert15\nVersion \(version).",
                                  preferredStyle: .alert)
    let okAction = UIAlertAction(title: "OK", style: .default, handler: nil)
    alert.addAction(okAction)
    present(alert, animated: true, completion: nil)
  }

  // MARK: - UICollectionViewDelegate

...
